--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,31 +1,38 @@
 .nav-bar-main {
     background-color: #001841;
 }
+
 .navbar-expand-lg .navbar-nav .nav-link {
-    padding-right : 20px;
+    padding-right: 20px;
 }
+
 .nav-link-ex {
     color: white;
     font-weight: 500;
 }
+
 .nav-item-custom {
     padding-right: 50px;
 }
+
 .nav-link-ex:hover {
     color: #f57d01;
     font-weight: 500;
 }
+
 .signup-btn {
     background-image: linear-gradient(to bottom, #f37800, #fe9800);
     color: white;
     font-weight: 500;
 }
+
 .signup-btn:hover {
     background-image: linear-gradient(to bottom, #f37800, #fe9800);
     color: white;
     font-weight: 500;
     border: none;
 }
+
 .navbar-toggler {
     line-height: 0;
     font-size: inherit;
@@ -37,11 +44,14 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    height: calc(100vh - 56px);
 }
+
 .logo {
     width: 30%;
     height: auto;
 }
+
 .form-btn-main {
     width: 40%;
     background-color: #e2e1e5;
@@ -49,6 +59,7 @@
     margin: 0 auto;
     transform: translateY(+25px);
 }
+
 button.nav-link {
     padding: 20px;
     margin: 0 auto;
@@ -58,33 +69,41 @@ button.nav-link {
     border: none;
     color: #1e1e1e;
 }
+
 button.nav-link.active {
     background-color: transparent;
     border-radius: 5px;
     border: none;
 }
+
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
     color: #5392f9;
 }
+
 .form-btn-svg {
     width: 50px;
     height: 50px;
 }
+
 #nav-home-tab {
     background-color: transparent;
 }
+
 .form-btn {
     color: #1e1e1e;
 }
+
 .form-content {
     background-color: rgb(255, 255, 255);
     background-color: rgba(255, 255, 255, 0.4);
     border: 1px solid white;
     border-radius: 30px;
 }
+
 .form-select {
     border-radius: 10px;
 }
+
 .subTitles {
     color: #1e1e1e;
     font-weight: bold;
@@ -95,19 +114,23 @@ button.nav-link.active {
     margin: 0 auto;
     width: 60%;
 }
+
 .travel-fare-group {
     background-color: #00ff85;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
+
 h4 {
     margin: 0;
     line-height: 1.5;
 }
+
 .price {
     font-weight: bolder;
     font-style: italic;
 }
+
 .booknow-btn {
     width: 50px;
     background-color: #e2e1e5;
@@ -117,6 +140,7 @@ h4 {
     border-radius: 0 10px 10px 0;
     border: none;
 }
+
 .booknow-btn:hover {
     width: 50px;
     background-image: linear-gradient(to bottom, #f37800, #fe9800);
