Implement Rates.tsx

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -51,6 +51,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   padding-bottom: 200px;
 }
 
