Upgrade email templates

--- a/functions/src/templates/customer/html.pug
+++ b/functions/src/templates/customer/html.pug
@@ -176,7 +176,7 @@ table(style='border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso
                                                                 li(style='font-size: 14px; line-height: 19.6px;')
                                                                     em
                                                                         span(style='font-family: georgia, palatino; font-size: 14px; line-height: 19.6px;')
-                                                                            strong Trip Date & Time:
+                                                                            strong Trip Date & Time (CET):
                                                                             |  #{tripDate}
                                                                 li(style='font-size: 14px; line-height: 19.6px;')
                                                                     em
