--- a/functions/src/templates/customer/html.pug
+++ b/functions/src/templates/customer/html.pug
@@ -187,7 +187,7 @@ table(style='border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso
                                                                     em
                                                                         span(style='font-family: georgia, palatino; font-size: 14px; line-height: 19.6px;')
                                                                             strong Total Cost:
-                                                                            |  $ #{cost}
+                                                                            |  #{cost}
                                         table(style='font-family:arial,helvetica,sans-serif;', role='presentation', cellpadding='0', cellspacing='0', width='100%', border='0')
                                             tbody
                                                 tr
