--- a/functions/src/templates/owner/html.pug
+++ b/functions/src/templates/owner/html.pug
@@ -118,7 +118,7 @@ table(style='border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso
                                                             p(style='font-size: 14px; line-height: 140%;') Trip : #{trip}
                                                             p(style='font-size: 14px; line-height: 140%;') From : #{from}
                                                             p(style='font-size: 14px; line-height: 140%;') Destination : #{destination}
-                                                            p(style='font-size: 14px; line-height: 140%;') Cost : $ #{cost}
+                                                            p(style='font-size: 14px; line-height: 140%;') Cost : #{cost}
                                                             p(style='font-size: 14px; line-height: 140%;') Trip Date &amp; Time (CET): #{tripDate}
                                                             p(style='font-size: 14px; line-height: 140%;') Person Count : #{personCount}
                                                             p(style='font-size: 14px; line-height: 140%;') Booked Time : #{bookedDate}
