Improve mobile support

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -177,6 +177,7 @@ button.nav-link.active {
     border: 1px solid #f18902;
     border-radius: 30px;
     color: black;
+    margin-bottom: 60px;
 
     img {
       width: 100%;
