--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,6 +9,15 @@ $breakpoint-xxl: 1400px;
   background-color: #001841;
 }
 
+.page-footer {
+  background-color: #001841;
+  color: white;
+
+  .nav-link {
+    color: white;
+  }
+}
+
 .navbar .nav-link {
   padding-right: 30px !important;
   color: white !important;
@@ -48,7 +57,6 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  padding-bottom: 200px;
 }
 
 .logo {
