Create feature section and style

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,3 +36,35 @@
     transform: rotate(360deg);
   }
 }
+
+
+/*features-section*/
+
+.features-main-icon, .features-book-btn {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.feature-card-title {
+  background: #05005c;
+  border-radius: 10px 10px 0 0;
+}
+
+.feature-card-content-main {
+  background: #f3f6ff;
+  border-radius: 0 0 10px 10px;
+}
+
+.feature-card-content {
+  width: 80%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.features-book-btn {
+  border-radius: 50px;
+  background: #fc6753;
+  border: none;
+}
