--- a/src/App.scss
+++ b/src/App.scss
@@ -47,12 +47,17 @@
 }
 
 .feature-card-title {
-  background: #05005c;
+  background: #001841;
   border-radius: 10px 10px 0 0;
+  font-weight: bold;
 }
 
 .feature-card-content-main {
-  background: #f3f6ff;
+  background-color: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(4px);
+  border-bottom: 1px solid white;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
   border-radius: 0 0 10px 10px;
 }
 
@@ -65,6 +70,6 @@
 
 .features-book-btn {
   border-radius: 50px;
-  background: #fc6753;
+  background-image: linear-gradient(to bottom, #fe9800, #f37800);
   border: none;
 }
