--- a/src/styles/contact-style.scss
+++ b/src/styles/contact-style.scss
@@ -3,6 +3,7 @@
   border: 1px solid white;
   border-radius: 30px;
   color: black;
+  width: 80%;
 }
 
 .contact-main-title {
@@ -23,9 +24,25 @@
 
 .contact-sub-title {
   font-size: large;
-  font-weight: bold;
+  padding-bottom: 40px;
 }
 
 .contact-details {
   font-weight: normal;
+}
+
+.contact-img .img-fluid {
+  max-width: 80%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contact-img {
+  margin: auto;
+}
+
+.contact-details-main a {
+  text-decoration: none;
+  color: black;
 }
