--- a/functions/src/templates/customer/html.pug
+++ b/functions/src/templates/customer/html.pug
@@ -17,59 +17,80 @@ head
             .u-row {
                 width: 500px !important;
             }
+
             .u-row .u-col {
                 vertical-align: top;
             }
+
             .u-row .u-col-100 {
                 width: 500px !important;
             }
         }
+
         @media (max-width: 520px) {
             .u-row-container {
                 max-width: 100% !important;
                 padding-left: 0px !important;
                 padding-right: 0px !important;
             }
+
             .u-row .u-col {
                 min-width: 320px !important;
                 max-width: 100% !important;
                 display: block !important;
             }
+
             .u-row {
                 width: calc(100% - 40px) !important;
             }
+
             .u-col {
                 width: 100% !important;
             }
+
             .u-col > div {
                 margin: 0 auto;
             }
         }
+
         body {
             margin: 0;
             padding: 0;
         }
+
         table,
         tr,
         td {
             vertical-align: top;
             border-collapse: collapse;
         }
+
         p {
             margin: 0;
         }
+
         .ie-container table,
         .mso-container table {
             table-layout: fixed;
         }
+
         * {
             line-height: inherit;
         }
+
         a[x-apple-data-detectors='true'] {
             color: inherit !important;
             text-decoration: none !important;
         }
-        table, td { color: #000000; } a { color: #0000ee; text-decoration: underline; }
+
+        table, td {
+            color: #000000;
+        }
+
+        a {
+            color: #0000ee;
+            text-decoration: underline;
+        }
 //if IE
   .ie-container
 //if mso
@@ -176,6 +197,11 @@ table(style='border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso
                                                                 li(style='font-size: 14px; line-height: 19.6px;')
                                                                     em
                                                                         span(style='font-family: georgia, palatino; font-size: 14px; line-height: 19.6px;')
+                                                                            strong Comment:
+                                                                            |  #{comment}
+                                                                li(style='font-size: 14px; line-height: 19.6px;')
+                                                                    em
+                                                                        span(style='font-family: georgia, palatino; font-size: 14px; line-height: 19.6px;')
                                                                             strong Trip Date & Time (CET):
                                                                             |  #{tripDate}
                                                                 li(style='font-size: 14px; line-height: 19.6px;')
@@ -188,19 +214,92 @@ table(style='border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso
                                                                         span(style='font-family: georgia, palatino; font-size: 14px; line-height: 19.6px;')
                                                                             strong Total Cost:
                                                                             |  #{cost}
+
+                                    //           Arrival Details
+                                    if trip === "Arrival" || trip === "Round Trip"
+                                        table(style='font-family:arial,helvetica,sans-serif;', role='presentation', cellpadding='0', cellspacing='0', width='100%', border='0')
+                                            tbody
+                                                tr
+                                                    td(style='overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:arial,helvetica,sans-serif;', align='left')
+                                                        h1(style='margin: 0px; line-height: 140%; text-align: center; word-wrap: break-word; font-weight: normal; font-family: book antiqua,palatino; font-size: 22px;')
+                                                            | Arrival Details
                                         table(style='font-family:arial,helvetica,sans-serif;', role='presentation', cellpadding='0', cellspacing='0', width='100%', border='0')
                                             tbody
                                                 tr
                                                     td(style='overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:arial,helvetica,sans-serif;', align='left')
                                                         div(style='line-height: 140%; text-align: left; word-wrap: break-word;')
-                                                            p(style='font-size: 14px; line-height: 140%; text-align: center;')
-                                                                span(style="font-family: 'book antiqua', palatino; font-size: 14px; line-height: 19.6px;") If you have any concern, please contact our support team
-                                                            p(style='font-size: 14px; line-height: 140%; text-align: center;')
-                                                                span(style="font-family: 'book antiqua', palatino; font-size: 14px; line-height: 19.6px;") #{supportTeam}
-                                                            p(style='font-size: 14px; line-height: 140%; text-align: center;')
-                                                                span(style="font-family: 'book antiqua', palatino; font-size: 14px; line-height: 19.6px;")
-                                                                    a(rel='noopener', href=`mailto:${supportTeamEmail}`, target='_blank') #{supportTeamEmail}
-                                        // [if (!mso)&(!IE)] <!
+                                                            li(style='font-size: 14px; line-height: 140%;')
+                                                                Strong Drop Point :
+                                                                | #{dropPoint_arrival}
+                                                            li(style='font-size: 14px; line-height: 140%;')
+                                                                Strong Drop Point Address (Optional) :
+                                                                | #{dropPointOptionalAddress_arrival}
+                                                            li(style='font-size: 14px; line-height: 140%;')
+                                                                Strong Flight Arrival Time (CET) :
+                                                                | #{flightArrivalTime_arrival}
+                                                            li(style='font-size: 14px; line-height: 140%;')
+                                                                Strong Flight Come From :
+                                                                | #{flightComeFrom_arrival}
+                                                            li(style='font-size: 14px; line-height: 140%;')
+                                                                Strong Flight/Train Number :
+                                                                | #{flightNumber_arrival}
+                                                            li(style='font-size: 14px; line-height: 140%;')
+                                                                Strong Pickup Date & Time (CET) :
+                                                                | #{pickUpDate_arrival}
+                                                            li(style='font-size: 14px; line-height: 140%;')
+                                                                Strong Pickup Point:
+                                                                | #{pickUpPoint_arrival}
+                                                            li(style='font-size: 14px; line-height: 140%;')
+                                                                Strong Pickup Point Address (Optional) :
+                                                                | #{pickUpPointOptionalAddress_arrival}
+                                                            p(style='font-size: 14px; line-height: 140%;') &nbsp;
+                                                            p(style='font-size: 14px; line-height: 140%;') &nbsp;
+
+                                    //            Departure Details
+                                    if trip === "Departure" || trip === "Round Trip"
+                                        table(style='font-family:arial,helvetica,sans-serif;', role='presentation', cellpadding='0', cellspacing='0', width='100%', border='0')
+                                            tbody
+                                                tr
+                                                    td(style='overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:arial,helvetica,sans-serif;', align='left')
+                                                        h1(style='margin: 0px; line-height: 140%; text-align: center; word-wrap: break-word; font-weight: normal; font-family: book antiqua,palatino; font-size: 22px;')
+                                                            | Departure Details
+                                        table(style='font-family:arial,helvetica,sans-serif;', role='presentation', cellpadding='0', cellspacing='0', width='100%', border='0')
+                                            tbody
+                                                tr
+                                                    td(style='overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:arial,helvetica,sans-serif;', align='left')
+                                                        div(style='line-height: 140%; text-align: left; word-wrap: break-word;')
+                                                            li(style='font-size: 14px; line-height: 140%;')
+                                                                Strong Drop Point :
+                                                                | #{dropPoint_departure}
+                                                            li(style='font-size: 14px; line-height: 140%;')
+                                                                Strong Drop Point Address (Optional) :
+                                                                | #{dropPointOptionalAddress_departure}
+                                                            li(style='font-size: 14px; line-height: 140%;')
+                                                                Strong Pickup Date & Time (CET) :
+                                                                | #{pickUpDate_departure}
+                                                            li(style='font-size: 14px; line-height: 140%;')
+                                                                Strong Pickup Point:
+                                                                | #{pickUpPoint_departure}
+                                                            li(style='font-size: 14px; line-height: 140%;')
+                                                                Strong Pickup Point Address (Optional) :
+                                                                | #{pickUpPointOptionalAddress_departure}
+                                                            p(style='font-size: 14px; line-height: 140%;') &nbsp;
+                                                            p(style='font-size: 14px; line-height: 140%;') &nbsp;
+
+
+                                    table(style='font-family:arial,helvetica,sans-serif;', role='presentation', cellpadding='0', cellspacing='0', width='100%', border='0')
+                                        tbody
+                                            tr
+                                                td(style='overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:arial,helvetica,sans-serif;', align='left')
+                                                    div(style='line-height: 140%; text-align: left; word-wrap: break-word;')
+                                                        p(style='font-size: 14px; line-height: 140%; text-align: center;')
+                                                            span(style="font-family: 'book antiqua', palatino; font-size: 14px; line-height: 19.6px;") If you have any concern, please contact our support team
+                                                        p(style='font-size: 14px; line-height: 140%; text-align: center;')
+                                                            span(style="font-family: 'book antiqua', palatino; font-size: 14px; line-height: 19.6px;") #{supportTeam}
+                                                        p(style='font-size: 14px; line-height: 140%; text-align: center;')
+                                                            span(style="font-family: 'book antiqua', palatino; font-size: 14px; line-height: 19.6px;")
+                                                                a(rel='noopener', href=`mailto:${supportTeamEmail}`, target='_blank') #{supportTeamEmail}
+                                    // [if (!mso)&(!IE)] <!
                                     // <![endif]
                             //if (mso)|(IE)
                             //if (mso)|(IE)
