--- a/functions/src/templates/owner/html.pug
+++ b/functions/src/templates/owner/html.pug
@@ -122,9 +122,60 @@ table(style='border-collapse: collapse;table-layout: fixed;border-spacing: 0;mso
                                                             p(style='font-size: 14px; line-height: 140%;') Trip Date &amp; Time (CET): #{tripDate}
                                                             p(style='font-size: 14px; line-height: 140%;') Person Count : #{personCount}
                                                             p(style='font-size: 14px; line-height: 140%;') Booked Time : #{bookedDate}
+                                                            p(style='font-size: 14px; line-height: 140%;') Comment : #{comment}
                                                             p(style='font-size: 14px; line-height: 140%;') &nbsp;
                                                             p(style='font-size: 14px; line-height: 140%;') &nbsp;
-                                        // [if (!mso)&(!IE)] <!
+
+
+                                //           Arrival Details
+                                if trip === "Arrival" || trip === "Round Trip"
+                                    table(style='font-family:arial,helvetica,sans-serif;', role='presentation', cellpadding='0', cellspacing='0', width='100%', border='0')
+                                        tbody
+                                            tr
+                                                td(style='overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:arial,helvetica,sans-serif;', align='left')
+                                                    h1(style='margin: 0px; line-height: 140%; text-align: center; word-wrap: break-word; font-weight: normal; font-family: book antiqua,palatino; font-size: 22px;')
+                                                        | Arrival Details
+                                    table(style='font-family:arial,helvetica,sans-serif;', role='presentation', cellpadding='0', cellspacing='0', width='100%', border='0')
+                                        tbody
+                                            tr
+                                                td(style='overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:arial,helvetica,sans-serif;', align='left')
+                                                    div(style='line-height: 140%; text-align: left; word-wrap: break-word;')
+                                                        p(style='font-size: 14px; line-height: 140%;') Drop Point : #{dropPoint_arrival}
+                                                        p(style='font-size: 14px; line-height: 140%;') Drop Point Address (Optional) : #{dropPointOptionalAddress_arrival}
+                                                        p(style='font-size: 14px; line-height: 140%;') Flight Arrival Time (CET) : #{flightArrivalTime_arrival}
+                                                        p(style='font-size: 14px; line-height: 140%;') Flight Come From : #{flightComeFrom_arrival}
+                                                        p(style='font-size: 14px; line-height: 140%;') Flight/Train Number : #{flightNumber_arrival}
+                                                        p(style='font-size: 14px; line-height: 140%;') Pickup Date & Time (CET) : #{pickUpDate_arrival}
+                                                        p(style='font-size: 14px; line-height: 140%;') Pickup Point: #{pickUpPoint_arrival}
+                                                        p(style='font-size: 14px; line-height: 140%;') Pickup Point Address (Optional) : #{pickUpPointOptionalAddress_arrival}
+                                                        p(style='font-size: 14px; line-height: 140%;') &nbsp;
+                                                        p(style='font-size: 14px; line-height: 140%;') &nbsp;
+
+
+                                //            Departure Details
+                                if trip === "Departure" || trip === "Round Trip"
+                                    table(style='font-family:arial,helvetica,sans-serif;', role='presentation', cellpadding='0', cellspacing='0', width='100%', border='0')
+                                        tbody
+                                            tr
+                                                td(style='overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:arial,helvetica,sans-serif;', align='left')
+                                                    h1(style='margin: 0px; line-height: 140%; text-align: center; word-wrap: break-word; font-weight: normal; font-family: book antiqua,palatino; font-size: 22px;')
+                                                        | Departure Details
+                                    table(style='font-family:arial,helvetica,sans-serif;', role='presentation', cellpadding='0', cellspacing='0', width='100%', border='0')
+                                        tbody
+                                            tr
+                                                td(style='overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:arial,helvetica,sans-serif;', align='left')
+                                                    div(style='line-height: 140%; text-align: left; word-wrap: break-word;')
+                                                        p(style='font-size: 14px; line-height: 140%;') Drop Point : #{dropPoint_departure}
+                                                        p(style='font-size: 14px; line-height: 140%;') Drop Point Address (Optional) : #{dropPointOptionalAddress_departure}
+                                                        p(style='font-size: 14px; line-height: 140%;') Pickup Date & Time (CET) : #{pickUpDate_departure}
+                                                        p(style='font-size: 14px; line-height: 140%;') Pickup Point: #{pickUpPoint_departure}
+                                                        p(style='font-size: 14px; line-height: 140%;') Pickup Point Address (Optional) : #{pickUpPointOptionalAddress_departure}
+                                                        p(style='font-size: 14px; line-height: 140%;') &nbsp;
+                                                        p(style='font-size: 14px; line-height: 140%;') &nbsp;
+
+
+
+                                // [if (!mso)&(!IE)] <!
                                     // <![endif]
                             //if (mso)|(IE)
                             //if (mso)|(IE)
